name:                post-checkout-migrations
version:             0.1.0.0
synopsis:            Remember to roll back migrations.
description:         A post-checkout script to remind users to roll back migrations.
homepage:            https://github.com/habibalamin/post-checkout-migrations
license:             MIT
license-file:        LICENSE
author:              Habib Alamin
maintainer:          ha.alamin@gmail.com
copyright:           2017 Habib Alamin
category:            Git
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:  README.md

executable post-checkout
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , directory >= 1.3 && < 2
                     , temporary >= 1.2 && < 2
                     , filepath >= 1.4 && < 2
                     , transformers >= 0.5 && < 0.6
                     , gitlib >= 3.1 && < 4
                     , gitlib-libgit2 >= 3.1 && < 4
                     , unordered-containers >= 0.2 && < 0.3
                     , text >= 1.2 && < 2
                     , tagged >= 0.8 && < 0.9
                     , containers >= 0.5 && < 0.6
                     , bytestring >= 0.10 && < 0.11
